# pretix-opencollective-payment

./: .gitignore  README.md  pyproject.toml
pretix_opencollective/: __init__.py  apps.py  payment.py
pretix_opencollective_payment/: __init__.py  apps.py  opencollective.py  payment.py  signals.py  urls.py  views.py
pretix_opencollective_payment/templates/pretixplugins/opencollective/: checkout_payment_confirm.html
tests/: conftest.py  test_payment.py  test_payment_urls.py  test_views.py
