[project]
name = "pretix-opencollective-payment"
version = "0.1.0"
description = "Open Collective payment provider for pretix"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "" }]
classifiers = [
    "Framework :: Django",
    "Framework :: Pretix",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pretix",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."pretix.plugin"]
pretix_opencollective_payment = "pretix_opencollective_payment:PretixPluginMeta"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
packages = ["pretix_opencollective_payment"]
include-package-data = true

[tool.setuptools.package-data]
pretix_opencollective_payment = ["templates/**/*"]
